--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="./src/img/LogoCDT.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/jpg" href="./src/img/LogoCDT.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio</title>
+</head>
+
+<body>
+  <div id="root">
+    <style>
+      @font-face {
+        font-family: Gumela;
+        src: url('../src/fonts/Gumela/*');
+      }
+
+      * {
+        font-family: Gumela;
+        font-weight: normal;
+        font-size: 20px;
+
+      }
+
+      body {
+        margin: 0;
+      }
+    </style>
+  </div>
+
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
